--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production& nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --public-url /js --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Andreea Lupse",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.10.1",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
@@ -26,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.1",
     "morgan": "^1.10.0",
+    "node-forge": "^0.10.0",
     "nodemailer": "^6.4.16",
     "pug": "^3.0.0",
     "slugify": "^1.4.6",
@@ -41,9 +45,18 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
   },
   "engines": {
     "node": ">=10.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alupse/realFeelProd.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alupse/realFeelProd/issues"
+  },
+  "homepage": "https://github.com/alupse/realFeelProd#readme"
 }
