--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "node-forge": "^0.10.0",
     "nodemailer": "^6.4.16",
     "pug": "^3.0.0",
+    "sharp": "^0.26.3",
     "slugify": "^1.4.6",
     "validator": "^13.5.1",
     "xss-clean": "^0.1.1"
