--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-forge": "^0.10.0",
     "nodemailer": "^6.4.16",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pug": "^3.0.0",
     "sharp": "^0.26.3",
     "slugify": "^1.4.6",
