--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.1",
     "express-rate-limit": "^5.2.3",
+    "geolocation": "^0.2.0",
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
     "html-to-text": "^6.0.0",
