--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An amazing app kinda like airbnb experiences made using node, express and mongoDB",
   "main": "app,js",
   "scripts": {
-    "start": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "start:prod": "SET NODE_ENV=production& nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --public-url /js --out-file bundle.js",
